@@ -4,6 +4,7 @@ Changelog
 0.2 - Unreleased
 ----------------
 
+* Thumbnails are always in formats PNG, JPG or GIF even if original is something else i.e TIFF
 * Enabled folder.ImageView for ATTopics. [pthulin]
 * Fixed bug where 16:9 images scaled to 16:9 background resulted in black borders. [pthulin]
 * Simplified design, removed ImageLink and ImageTag. [pthulin]
